--- a/installer-manifest.yaml
+++ b/installer-manifest.yaml
@@ -1,8 +1,8 @@
 AddonId: MoData_5a0a672a-998a-4cf3-94ea-44543de5afcb
 Packages:
-  - Version: 0.1.0
+  - Version: 0.0.1
     RequiredApiVersion: 6.12.0.0
     ReleaseDate: 2025-07-05
     PackageUrl: https://github.com/jonosellier/MoData/releases/download/v0.0.1/MoData_5a0a672a-998a-4cf3-94ea-44543de5afcb_0_0_1.pext
     Changelog:
-      - Initial Release
+      - Initial Release (DevPreview)
