--- a/extension.yaml
+++ b/extension.yaml
@@ -1,7 +1,7 @@
 ﻿Id: MoData_5a0a672a-998a-4cf3-94ea-44543de5afcb
-Name: Generic Plugin
+Name: Mo Data
 Author: John Doe
-Version: 0.0.2
+Version: 0.1.0
 Module: MoData.dll
 Type: GenericPlugin
 Icon: icon.png
