--- a/installer-manifest.yaml
+++ b/installer-manifest.yaml
@@ -31,3 +31,10 @@ Packages:
     PackageUrl: https://github.com/jonosellier/MoData/releases/download/v0.1.2/MoData_5a0a672a-998a-4cf3-94ea-44543de5afcb_0_1_2.pext
     Changelog:
       - Add ✨even more✨ props for theme developers
+  - Version: 0.1.3
+    RequiredApiVersion: 6.12.0.0
+    ReleaseDate: 2025-07-10
+    PackageUrl: https://github.com/jonosellier/MoData/releases/download/v0.1.3/MoData_5a0a672a-998a-4cf3-94ea-44543de5afcb_0_1_3.pext
+    Changelog:
+      - Change disk unit rounding from 2 decimal places (12.34) to 3 significant figures (1.23, 23.4, or 456)
+      - Add support for displaying Disk Storage in Yottabytes (~1000000000000000000000 bytes)
